Fix swiping left and right on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,14 @@
  *= require_self
  */
 
+html, body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative
+}
+
 @font-face {
   font-family: 'Jaldi Bold';
   src: url('Jaldi-Bold.ttf') format('truetype');
